--- a/src/components/tailwind/styles-base.sass
+++ b/src/components/tailwind/styles-base.sass
@@ -129,4 +129,7 @@
 			&::after
 				@apply hidden #{!important}
 		.wpml-ls-sub-menu
-			@apply right-auto border-0 #{!important}
+			@apply right-auto border-0 xl:h-[50px] #{!important}
+			@screen lg
+			@screen xl
+				@apply text-red-500
